Overflow issues
I’ll need to fix the layout. Definitely some newb issues going on here.

--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
 }
 .l-half, .r-half {
   display: inline-block;
-  height: 600px;
   width: 50%;
 }
 .r-half {
@@ -39,7 +38,6 @@ body {
   position: relative;
   margin-top: 10px;
   padding: 10px;
-  height: 270px;
   background-color: rgba(72, 84, 87, .7);
 }
 #promoBox img {
